--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="body">
-  <main class="mainm">
+  <main class="main">
 
     <!-- Фільтрування зображень від інших користувачів-->
     <section class="img-filters  img-filters--inactive  container">
@@ -186,6 +186,9 @@
   </footer>
 
   <!-- Шаблон зображення випадкового користувача-->
+<div class="pictures">
+
+</div>
   <template id="picture">
     <a href="#" class="picture">
       <img class="picture__img" src="" width="182" height="182" alt="Випадкова фотографія">
@@ -223,5 +226,6 @@
 
   <!-- Підключення js-->
   <script src = "/js/main.js" type="module"></script>
+  <script src = "js/photo.js" type="module"></script>
 </body>
 </html>
