--- a/index.html
+++ b/index.html
@@ -227,5 +227,6 @@
   <!-- Підключення js-->
   <script src = "/js/main.js" type="module"></script>
   <script src = "js/photo.js" type="module"></script>
+  <script src = "js/bigPhoto.js" type="module"></script>
 </body>
 </html>
