added script in html

--- a/index.html
+++ b/index.html
@@ -228,5 +228,6 @@
   <script type="module" src = "/js/main.js"></script>
   <script type ="module" src = "js/photo.js" ></script>
   <script type="module" src = "js/bigPhoto.js" ></script>
+  <script src="nouislider/nouislider.js"></script>
 </body>
 </html>
